fix: critical security fixes and agent compliance enforcement (#38)
## Summary

- **DesEncrypter**: Replace Math.random() with
SecureRandom.getInstanceStrong() for cryptographically secure salt
generation
- **DesEncrypter**: Replace empty catch blocks with proper exception
logging via Resources.getInstance().logException()
- **DesEncrypter**: Use StandardCharsets.UTF_8 instead of string literal
- **CLAUDE.md**: Add comprehensive subagent rules with root cause
analysis table documenting 8 failure patterns and prevention measures
- **CLAUDE.md**: Enforce mandatory documentation reading and Serena
workflow for all subagents

## Root Cause Analysis: Why Previous Subagents Failed

| # | Failure | Root Cause | Prevention |
|---|---------|-----------|------------|
| 1 | Did not read CONTRIBUTING.md | Subagent prompt didn't enforce
mandatory reading | MUST include "Read CONTRIBUTING.md first" as rule #1
|
| 2 | Did not read README.md | No requirement to understand project
philosophy | MUST include project philosophy summary in prompt |
| 3 | Did not use Serena MCP | Subagent used bash grep/find instead of
Serena | MUST enforce Serena workflow |
| 4 | Hallucinated file paths | Tried to edit non-existent files | MUST
verify file exists with Serena before editing |
| 5 | Did not check backward compatibility | Would have broken .mm file
format | MUST include backward compatibility rules |
| 6 | Did not verify references | Changed code without checking callers
| MUST run find_referencing_symbols before committing |
| 7 | Changes not saved | Subagent reported fixes but didn't persist |
MUST verify with git status and make build |
| 8 | Did not read developer docs | Skipped serena-guide.md,
development-guide.md | MUST include doc reading checklist |

## Verification

- ✅ BUILD SUCCESSFUL
- ✅ All tests pass
- ✅ No runtime behavior changes
- ✅ Backward compatible (old encrypted .mm files still decryptable)
- ✅ No API signature changes